implemented output to LCD display

--- a/software/color_blind_bsp/Makefile
+++ b/software/color_blind_bsp/Makefile
@@ -267,6 +267,13 @@ altera_nios2_qsys_hal_driver_ASM_LIB_SRCS := \
 	$(altera_nios2_qsys_hal_driver_SRCS_ROOT)/src/alt_log_macro.S \
 	$(altera_nios2_qsys_hal_driver_SRCS_ROOT)/src/crt0.S
 
+# avalon_character_lcd_driver sources root 
+avalon_character_lcd_driver_SRCS_ROOT := drivers
+
+# avalon_character_lcd_driver sources 
+avalon_character_lcd_driver_C_LIB_SRCS := \
+	$(avalon_character_lcd_driver_SRCS_ROOT)/src/altera_up_avalon_character_lcd.c
+
 # avalon_video_pixel_buffer_dma_driver sources root 
 avalon_video_pixel_buffer_dma_driver_SRCS_ROOT := drivers
 
@@ -338,6 +345,7 @@ COMPONENT_C_LIB_SRCS += \
 	$(Avalon_Audio_and_Video_driver_C_LIB_SRCS) \
 	$(altera_avalon_jtag_uart_driver_C_LIB_SRCS) \
 	$(altera_nios2_qsys_hal_driver_C_LIB_SRCS) \
+	$(avalon_character_lcd_driver_C_LIB_SRCS) \
 	$(avalon_video_pixel_buffer_dma_driver_C_LIB_SRCS) \
 	$(hal_C_LIB_SRCS)
 
